--- a/src/index.html
+++ b/src/index.html
@@ -4,30 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  
     <title>Document</title>
 </head>
 <body>
-    <h1>Introduccion</h1>
-    <label for="">Texto</label>
-    <input type="text" name="test">
-    <input type="text" name="test">
-    <input type="text" name="test">
-    <input type="text" name="test1">
+    <section class="container my-4">
+        <div class="row justify-content-around" id="divSection">
+            <h1 class="justufy-content-center align-middle">Rick and Morty</h1>
 
-    <input type="text" name="test" class="test">
-    <input type="text" name="test1" class="test">
-
-    <input type="text" name="test" class="test" id="principal">
-    <input type="text" name="test1" class="test" id="principal">
-
-    <h1 id="msm">Hola</h1>
-    <h1 id="msm">Hola</h1>
-    <h1 id="msm">Hola</h1>
-    <h1 id="msm">Hola</h1>
-
+        </div>
+    </section>
+  
     <!-- <script src="https://cdn.jsdelivr.net/npm/luxon@3.2.1/build/global/luxon.min.js"></script> -->
-    <script src="../js/dom.js"></script>
+    <script src="../js/0113.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
     <!-- <script src="../js/code.js"></script> -->
 </body>
 </html>
