--- a/DOM/src/index.html
+++ b/DOM/src/index.html
@@ -14,10 +14,14 @@
             <h1 class="justufy-content-center align-middle">Rick and Morty</h1>
 
         </div>
+
+        <button type="button" id="test" class="btn btn-primary">Primary</button>
+        <!-- <input type="text" value="" id="test"> -->
     </section>
   
     <!-- <script src="https://cdn.jsdelivr.net/npm/luxon@3.2.1/build/global/luxon.min.js"></script> -->
-    <script src="../js/0113.js" type="module"></script>
+    <!-- <script src="../js/0113.js" type="module"></script> -->
+    <script src="../js/170123.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
     <!-- <script src="../js/code.js"></script> -->
